# cross-platform-primes

./: .gitignore  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/yuki/primes/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/yuki/primes/app/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
android/app/src/main/res/layout/: fragment_first.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/values-v23/: themes.xml
android/app/src/test/java/com/yuki/primes/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
android/nativelib/: build.gradle.kts
android/nativelib/src/androidTest/java/com/yuki/prime/lib/: PrimesTest.kt
android/nativelib/src/main/cpp/: CMakeLists.txt  PrimeLibAndroid.cpp  PrimeLibAndroid.h  PrimeLog.h  lib.cpp
android/nativelib/src/main/java/com/yuki/prime/lib/: Primes.java
core/: CMakeLists.txt
core/cmake/: FindGoogleTest.cmake
core/src/: CMakeLists.txt  Primes.cpp  Primes.h
core/test/: CMakeLists.txt  PrimeTest.cpp
win32/PrimeLibrary/: .gitignore  CMakeLists.txt  TestResult.xml
win32/PrimeLibrary/cpp/: CMakeLists.txt  PrimeLibrary.cpp
win32/PrimeLibrary/csharp/: CMakeLists.txt  Library.cs  packages.config.template
win32/PrimeLibrary/csharp/Config/: AssemblyInfo.cs.template
win32/PrimeLibrary/csharp/Tests/: CMakeLists.txt  LibraryTest.cs  TestSuite.cs
